cmake_minimum_required(VERSION 3.8.0)
set(CMAKE_CXX_STANDARD 17)
file(GLOB srcs ./src/*.cpp)
add_executable(server ${srcs})
find_package(Boost)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  link_directories(${Boost_LIBRARY_DIRS})
  target_link_libraries(server ${Boost_LIBRARIES} )
endif()
