cmake_minimum_required(VERSION 3.8.0)
project(GameServer)
set(CMAKE_CXX_STANDARD 11)
file(GLOB srcs ./src/*.cpp ./proto/*.cc)
include_directories(./ ./proto)
add_executable(server ${srcs})
find_package(Boost)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  link_directories(${Boost_LIBRARY_DIRS})
  target_link_libraries(server ${Boost_LIBRARIES} )
endif()
find_package(Protobuf)
if(Protobuf_FOUND)
  include_directories(${Protobuf_INCLUDE_DIRS})
  link_directories(${Protobuf_LIBRARY_DIRS})
  target_link_libraries(server ${Protobuf_LIBRARIES} )
endif()
